--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.429.0",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
