--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "unsplash-js": "^7.0.19",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
