--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
@@ -18,6 +19,7 @@
     "appwrite": "^15.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.429.0",
     "next": "^14.2.6",
     "next-themes": "^0.3.0",
@@ -25,6 +27,7 @@
     "react-avatar": "^5.0.3",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-use": "^17.5.1",
