--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-select": "^5.8.0",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
