--- a/package.json
+++ b/package.json
@@ -15,22 +15,27 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.52.1",
     "appwrite": "^15.0.0",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^11.4.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.429.0",
-    "next": "^14.2.6",
+    "next": "^14.2.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-avatar": "^5.0.3",
+    "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-confetti-explosion": "^2.1.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.0",
     "react-select": "^5.8.0",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
