--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
@@ -18,10 +19,12 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.52.1",
     "appwrite": "^15.0.0",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.1",
     "framer-motion": "^11.4.0",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.429.0",
@@ -36,6 +39,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
+    "react-markdown": "^9.0.1",
     "react-select": "^5.8.0",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
